--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
+/* Background CSS */
 html {
 	background: url(../images/background.png);
 	background-size: cover;
 }
 
+/* Header CSS */
 header {
 	background-color: #fff;
 	overflow: auto;
@@ -19,6 +21,7 @@ header h1 {
 	padding: 20px;
 	float: left;
 	position: relative;
+	font-size: 25px;
 }
 
 ul {
@@ -43,22 +46,43 @@ li a {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
+li a:hover {
+	color: #4aaaad;
+}
+
+li a:active {
+	color: #4aaaad;
+}
+
+/* Site Content CSS */
 section {
 	clear: both;
 	width: 960px;
 	margin: 40px 0px 20px 80px;
 }
 
-h1, h2 {
+h1 {
 	color: #4aaaad;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	margin-left: 30px;
+	font-size: 25px;
+	line-height: 1.75;
+}
+
+h2 {
+	color: #4aaaad;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	margin-left: 30px;
+	font-size: 25px;
+	line-height: 1.75;
 }
 
 h3 {
 	color: #4aaaad;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	text-align: center;
+	font-size: 20px;
+	line-height: 1.75;
 }
 
 hr {
@@ -73,6 +97,7 @@ hr {
     width: 590px;
 }
 
+/*  Main Content Section */
 .mainContent {
 	float: left;
 	background-color: #fff;
@@ -93,9 +118,58 @@ hr {
 	color: #777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	margin: 20px 20px 20px 30px;
+	line-height: 1.25;
 
 }
 
+form {
+	margin: 20px 20px 20px 30px;
+	color: #777;
+}
+
+input {
+	padding: 7px;
+	margin: 5px;
+}
+
+button {
+	background-color: #4aaaad;
+	padding: 10px;
+	width: 100px;
+	color: white;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 14px;
+
+}
+
+.portfolioImg {
+	float: left;
+	background-color: #fff;
+	border-color: #dddddd;
+	border: solid;
+	border-width: .05px; 
+	width: 650px;
+	position: relative;	
+	margin-bottom: 40px;
+}
+
+#image1 {
+	margin: 20px;
+}
+
+#image2 {
+	margin: 20px;
+}
+
+#image3 {
+	margin: 20px;
+}
+
+#image4 {
+	margin: 20px;
+}
+
+/* Social Media Sidebar */
 .social {
 	float: right;
 	background-color: #fff;
@@ -123,17 +197,18 @@ hr {
 	width: 55px;
 	padding: 5px;
 	display: inline-block;
-	margin: auto;
+	margin: 5px 5px 10px 5px;
 }
 
-.atopFooter hr {
+/* Footer CSS */
+.atopFooter {
 	clear: both;
-	width: 100%;
- 	margin-bottom: 0%;
-    border-style: solid;
+	border-style: solid;
     border-width: 5px;
     color: #4aaaad;
+    bottom: 0;
 }
+
 
 .footer {
 	clear: both;
@@ -141,7 +216,14 @@ hr {
 	background-color: #666;
 	text-align: center;
 	color: #fff;
-	margin-bottom: 0;
 	margin-top: 0;
+	border-width: 0;
+	bottom: 0;
+	height: 30px;
+}
+
+footer {
+	bottom: 0px;
+	position: relative;
 	width: 100%;
 }
