--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Background CSS */
 html {
 	background: url(../images/background.png);
-	background-size: cover;
+	height: 1000px;
 }
 
 /* Header CSS */
@@ -53,7 +53,7 @@ li a:active {
 	color: #4aaaad;
 }
 
-/* Site Content CSS */
+/* Site Headings CSS */
 section {
 	clear: both;
 	width: 960px;
@@ -123,6 +123,7 @@ hr {
 
 }
 
+/* Form CSS */
 form {
 	margin: 20px 20px 20px 30px;
 	color: #777;
@@ -145,7 +146,8 @@ button {
 
 }
 
-.portfolioImg {
+/* Portfolio Image CSS */
+.portfolio {
 	float: left;
 	background-color: #fff;
 	border-color: #dddddd;
@@ -156,11 +158,26 @@ button {
 	margin-bottom: 40px;
 }
 
+.portfolioImgs h1 {
+	color: #fff;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    margin-left: 30px;
+    font-size: 25px;
+    line-height: 1.75;
+    position: absolute;
+    padding: 10px;
+    width: 230px;
+    text-align: center;
+    background: #4aaaad;
+    margin-top: 120px;
+}
+
 #image1 {
 	margin: 20px;
 	float: center;
 	width: 250px;
 	padding: 10px;
+	z-index: -1px;
 }
 
 #image2 {
@@ -228,7 +245,10 @@ button {
 	border-style: solid;
     border-width: 5px;
     color: #4aaaad;
-    bottom: 0;
+    bottom: 70px;
+    position: absolute;
+    width: 100%;
+    bottom: -330px;
 }
 
 
@@ -240,13 +260,14 @@ button {
 	color: #fff;
 	margin-top: 0;
 	border-width: 0;
-	bottom: 0;
+	bottom: -400px;
 	height: 30px;
-	position: relative;
+	position: absolute;
+	width: 100%;
 }
 
 footer {
-	bottom: 0px;
+	bottom: 0%;
 	position: absolute;
 	width: 100%;
 }
